# Resume-Analyser

./: README.md  pyproject.toml
resume_analyser/: app.py  test.py
resume_analyser/resumes/: YASHWANTH MEDIPALLY.docx  Yashwanth Patel Medipally (Final).docx
resume_analyser/static/: index.css
resume_analyser/templates/: index.html
